# proto-wrf4foam

./: .gitignore  AUTO-CHECKPOINT.md  LICENSE  README.md
gazebo_wind_plugin/: CMakeLists.txt  ContactWatcherPlugin.cc  ContactWatcherPlugin.hh  HoverPidPlugin.cc  HoverPidPlugin.hh  InspectionPathControllerPlugin.cc  InspectionPathControllerPlugin.hh  README.md  RotorSpinPlugin.cc  RotorSpinPlugin.hh  TrailMarkerPlugin.cc  TrailMarkerPlugin.hh  WindFieldPlugin.cc
gazebo_wind_plugin/lut_reader/: WindLUT.cc  WindLUT.hh
gazebo_wind_plugin/models/demo_building_collision/: model.config  model.sdf
gazebo_wind_plugin/models/guangzhou_buildings/: model.config  model.sdf
gazebo_wind_plugin/models/iris_wind_demo/: model.config  model.sdf
gazebo_wind_plugin/models/iris_wind_quad/: model.config  model.sdf
gazebo_wind_plugin/models/iris_wind_quad_hires_demo/: model.config  model.sdf
gazebo_wind_plugin/models/iris_wind_quad_hires_pt1_crash/: model.config  model.sdf
gazebo_wind_plugin/models/iris_wind_quad_hires_pt2_hover/: model.config  model.sdf
gazebo_wind_plugin/models/px4_iris_assets/: model.config  model.sdf
gazebo_wind_plugin/models/wind_arrow_glyph/: model.config  model.sdf
gazebo_wind_plugin/models/wind_arrows_hotspot/: model.config  model.sdf
gazebo_wind_plugin/models/wind_arrows_hotspot_hires/: model.config  model.sdf
gazebo_wind_plugin/worlds/: guangzhou_demo_pt1_crash.world  guangzhou_demo_pt2_hover.world  guangzhou_wind.world  guangzhou_wind_hires_demo.world
results/: color-mapping.md
scripts/: build_demo_collision_model.py  check_gazebo_env.sh  (+16 more)
(+92 files in other folders)
